\name{NEWS}
\title{News for Package \pkg{anytime}}
\newcommand{\ghpr}{\href{https://github.com/eddelbuettel/anytime/pull/#1}{##1}}
\newcommand{\ghit}{\href{https://github.com/eddelbuettel/anytime/issues/#1}{##1}}

\section{Changes in Rcpp version 0.0.2 (2016-xx-yy)}{
  \itemize{
    \item Refactored to use a simple class wrapped around two
    vector with (string) formats and locales; this allow for adding formats;
    also adds accessor for formats (\ghpr{4})
  }
}


\section{Changes in Rcpp version 0.0.1 (2016-09-12)}{
  \itemize{
    \item Initial release with \code{anytime()} and \code{anydate}
  }
}