@@ -1,6 +1,6 @@
 export("anytime",
        "anydate",
        "getFormats",
-       "addFormat")
+       "addFormats")
 importFrom(Rcpp, evalCpp)
 useDynLib(anytime, .registration=TRUE)
