@@ -1,19 +1,20 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/RcppExports.R
 \name{getFormats}
-\alias{addFormat}
+\alias{addFormats}
 \alias{getFormats}
 \title{Functions to retrieve (or set) formats used for parsing dates.}
 \usage{
 getFormats()
 
-addFormat(fmt)
+addFormats(fmt)
 }
 \arguments{
-\item{fmt}{A character value in the form understood by Boost date_time}
+\item{fmts}{A vector of character values in the form understood by Boost
+date_time}
 }
 \value{
-Nothing in the case of \code{addFormat}; a character vector of
+Nothing in the case of \code{addFormats}; a character vector of
 formats in the case of \code{getFormats}
 }
 \description{
@@ -23,7 +24,8 @@ by the underlying implementation of the Boost date_time library.
 }
 \examples{
   getFormats()
-  addFormat("\%d \%b \%y")   # two-digit date [not recommended], textual month
+  addFormats(c("\%d \%b \%y",      # two-digit date [not recommended], textual month
+               "\%a \%b \%d \%Y"))  # weekday weeknumber four-digit year
 }
 \author{
 Dirk Eddelbuettel
